Finish scope chatper

--- a/doc/inc/30_scope.tex
+++ b/doc/inc/30_scope.tex
@@ -64,7 +64,7 @@ Diese Projektarbeit besteht aus drei Teilen. Der Beschreibung der
 theoretischen Grundlagen, der Beschreibung des als Sphere Tracing
 bekannten Verfahrens sowie der Umsetzung eines Prototypen.
 
-Für diese Projektarbeit liegt der Fokus vorallem auf der
+Für diese Projektarbeit liegt der Fokus vor allem auf der
 (mathematischen) Beschreibung von Oberflächen und der Nutzung dieser,
 sowie der Darstellung von Szenen mittels Sphere Tracing. Bei dem
 erstellten Prototypen handelt es sich um eine Art Machbarkeitsstudie,
@@ -74,12 +74,29 @@ dargestellt werden können.
 Diese Projektarbeit dient als Vorarbeit und Grundlage für das MSE-Modul
 \textit{MTE7102}.
 
-\subsection{Vorgängige Arbeiten}
+\subsection{Vorgängige Aktivitäten}
 \label{subsec:preliminaries}
 
-\todo[inline]{Describe preliminaries}
+Die Grundlagen dieser Projektarbeit waren dem Autor durch sein
+vorgängiges Studium an der Berner Fachhochschule mit
+Schwerpunkt~\textit{Computer Perception and Virtual Reality} bereits
+bekannt, jedoch nicht in dieser Tiefe.
+
+Durch sein Interesse für die Demoszene wurde der Autor auf die Thematik
+dieser Arbeit aufmerksam, hatte sich aber zuvor nie eingehend damit
+auseinander gesetzt.
 
 \subsection{Neue Lerninhalte}
 \label{subsec:new_learning_contents}
 
-\todo[inline]{Describe new learning contents}
+Zusätzlich zu den formalen Lerninhalten hatte die Arbeit für den Autor
+die folgenden neuen Lerninhalte:
+\begin{itemize}
+    \item{Implizite Oberflächen}
+    \item{Distanzfunktionen}
+    \item{Distanzfelder}
+    \item{Ray Marching}
+    \item{Sphere Tracing}
+    \item{Darstellung von (weichen) Schatten}
+    \item{Praktische Umsetzung der vorgestellten Verfahren}
+\end{itemize}
