Finish administration chapter

--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -25,7 +25,7 @@ Protokolles festgehalten.
 
 Um bei der Arbeit ein möglichst strukturiertes Vorgehen einzuhalten, wurden folgende Projektphasen gewählt:
 \begin{itemize}
-    \item Projektstart
+    \item Start der Projektarbeit
     \item Erarbeitung und Festhalten der Anforderungen
     \item Erarbeitung der theoretischen Grundlagen
     \item Erstellung der abschliessenden Dokumentation
@@ -59,7 +59,7 @@ Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der
         \ganttmilestone{Abgabe Dokumentation}{22}
     \end{ganttchart}
     \caption{Zeitplan; Der Titel stellt Jahreszahlen, der Untertitel
-    Kalenderwochen dar}
+    Kalenderwochen dar}\label{fig:timeschedule}
 \end{figure}
 
 \subsubsection{Projektstart}
@@ -67,8 +67,8 @@ Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der
 
 In der ersten Phase wurden die Meilensteine der Arbeit identifiziert und
 skizziert. Um Details der Aufgabe zu verstehen, wurde das notwendige
-Vorwissen über globale Beleuchtungsalgorithmen erarbeitet. Weiter wurde
-das Grundgerüst dieser Dokumentation erstellt.
+Vorwissen über Algorithmen zur globale Beleuchtung erarbeitet. Weiter wurde
+die Grundlage dieser Dokumentation erstellt.
 
 \subsubsection{Anforderungen}
 \label{ssubsec:requirements}
@@ -78,7 +78,12 @@ ausgehend wurden die dazu erforderlichen Projektphasen festgelegt.
 
 \subsubsection{Erarbeitung theoretische Grundlagen}
 \label{ssubsec:theoretical_background}
-\todo[inline]{Describe theoretical background}
+
+In dieser Phase ging es darum, sich in die Materie einzulesen und sich
+diese anzueignen. Das Lesen und Bearbeiten von Publikationen führte zu
+vielen neuen Anstössen und immer wieder zu neuen Recherchen. Die
+Erkenntnisse dieser Phase flossen so stetig in die Dokumentation ein,
+ergänzten und beeinflussten diese.
 
 \subsubsection{Dokumentation}
 \label{ssubsec:documentation}
@@ -110,7 +115,9 @@ fertiggestellten Teilen.
     \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde
         für die Entwicklung dieser Dokumentation verwendet. Die
         Projektarbeit findet sich
-        unter~\href{https://www.github.com/sosterwalder/mte7101-project1}{GitHub}\footnote{\href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}}.
+        unter~\href{https://www.github.com/sosterwalder/mte7101-project1}{GitHub}\footnote{
+            \href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}
+        }.
     \item[GitHub] Eine freie Hosting-Platform für Git mit Weboberfläche.
 \end{description}
 
