--- a/doc/inc/static/attachment/minutes/20151004.rst
+++ b/doc/inc/static/attachment/minutes/20151004.rst
@@ -4,6 +4,9 @@ Place:            Skype
 Involved persons: Claude Fuhrer    (CF)
                   Sven Osterwalder (SO)
 
+Meeting minutes 2015-10-04
+==========================
+
 * External documents
   - Do external documents, e.g. papers, held in the project repository infringe copy rights? (CF)
     * Both are not entirely sure about the copy rights, so it is decided to share the documents only
@@ -13,20 +16,20 @@ Involved persons: Claude Fuhrer    (CF)
   - Phong equation
     * Why is the half way vector used (as described in Whitted's paper)
       instead of the more common usage of the angle (cosine) in direction of the light? (CF)
-        - It is ok to use Whitted's originally proposed formula, as the results
+        - It is OK to use Whitted's originally proposed formula, as the results
           are the same for both formulas (CF)
         - Although the specular factor for the specular component is missing and has to be
           added (CF)
 
-  - Structuring / procdeure
+  - Structuring / procedure
     * Is the document structuring and are the plans for further development in good order? (SO)
       - The structuring of the document as well as the plans for further development are
         in a good order and the work may continue in the currently ongoing direction (CF)
 
 * Literature
   - Is it somehow possible to get the second edition of "Computer graphics: principles and practice"? (SO)
-    * Mr. Fuhrer posseses the mentioned book and proposes furthermore the lecture of a book dedicated to
-      ray tracing which he also posesses. He will deposit both of the books on Monday, 5th of October 2015,
+    * Mr. Fuhrer possesses the mentioned book and proposes furthermore the lecture of a book dedicated to
+      ray tracing which he also possesses. He will deposit both of the books on Monday, 5th of October 2015,
       in a room within the "Rolex" building of the Berne University of applied sciences in Biel (CF)
 
 * Citations
@@ -36,8 +39,8 @@ Involved persons: Claude Fuhrer    (CF)
 
 * Document template
   - Remove currently used font "cmbright" as invoked to the usage of the LaTeX template of the Berne
-    Univeristy of applied sciences (CF)
-  - The lines shall be shortened so that they do not exceed 80 caracters per line (CF)
+    University of applied sciences (CF)
+  - The lines shall be shortened so that they do not exceed 80 characters per line (CF)
   - The margins, especially the left and the right margins, shall be enlarged as they are currently
     very narrow (CF)
 
