--- a/doc/inc/static/attachment/minutes/20151102.rst
+++ b/doc/inc/static/attachment/minutes/20151102.rst
@@ -11,22 +11,22 @@ Presentation and discussion of the current state of the work (SO)
 -----------------------------------------------------------------
 
 * The main progress since the last meeting was the development of the
-  prototype, the paper was not developped much further, only sections
-  concerning the protoype have been added or expanded (SO)
+  prototype, the paper was not developed much further, only sections
+  concerning the prototype have been added or expanded (SO)
 
-  * This is ok, although the prototype has not been reviewed in detail yet (CF)
+  * This is OK, although the prototype has not been reviewed in detail yet (CF)
 
 * The source code of the prototype should be commented, right now there are
   no comments (CF)
-  (TODO, added)
-
-* Deadline for handing in a rought draft is end of november resp. beginning of
-  december 2015 (CF) 
   (DONE)
 
-* Deadline for handing in final version end of january 2016 (CF)
+* Deadline for handing in a rough draft is end of November resp.\ beginning of
+  December 2015 (CF) 
+  (DONE)
 
-* Defence of the project work in february 2016, exact date to be defined (CF)
+* Deadline for handing in final version end of January 2016 (CF)
+
+* Defence of the project work in February 2016, exact date to be defined (CF)
 
 Further steps/proceedings (CF, SO)
 ----------------------------------
