Provide correct file endings for inclusion of verbatim files

--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -4,18 +4,18 @@
 \chapter{Meeting minutes}
 \label{chap:10_meeting_minutes}
 
-\VerbatimInput[label=20150921]{inc/static/attachment/minutes/20150921}
+\VerbatimInput[label=20150921]{inc/static/attachment/minutes/20150921.rst}
 \newpage
-\VerbatimInput[label=20151004]{inc/static/attachment/minutes/20151004}
+\VerbatimInput[label=20151004]{inc/static/attachment/minutes/20151004.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151011}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151011.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151018}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151018.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151025}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151025.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151102}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151102.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151115}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151115.rst}
 \newpage
-\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151206}
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151206.rst}
