Update versioning history

--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -11,7 +11,7 @@
 \begin{versionhistory}
     \vhEntry{0.1}{25.09.2015}{SO}{Initiale Erstellung des Dokumentes}
     \vhEntry{0.2}{27.09.2015}{SO}{Entwickeln einer initialen Struktur,
-        Dokumentaufbau, Entwicklung Kapitel~\ref{chap:procedure}, Beschreibung von
+        Aufbau der Dokumentation, Entwicklung Kapitel~\ref{chap:procedure}, Beschreibung von
         Ray Tracing in Kapitel~\ref{chap:theoretical_background}, Hinzufügen des
         Kapitels~\ref{chap:20_administrative}, Einführen von TODO-Notizen
     }
@@ -76,5 +76,62 @@
         Versionierung. Überarbeiten des Zeitplanes, weiter Überarbeitung des
         Bildmaterials. Hinzufügen des Kapitels~\ref{sec:shading}, Hinzufügen
         einer Einleitung zu Kapitel~\ref{chap:theoretical_background}.
+    }
+    \vhEntry{0.17}{17.12.2015}{SO}{Einführen des Kapitels über Modelle
+        zur Schattierung~\ref{sec:shading}, Fertigstellung der
+        Beschreibung von Gouraud-Shading~\ref{subsec:gouraud_shading}.
+    }
+    \vhEntry{0.18}{22.12.2015}{SO}{Erweiterung des Kapitels über Modelle
+        zur Schattierung~\ref{sec:shading} um diverse Illustrationen.
+    }
+    \vhEntry{0.19}{28.12.2015}{SO}{Erweiterung des Kapitels über Modelle
+        zur Schattierung~\ref{sec:shading} um diverse Illustrationen,
+        Hinzufügen eines (bildlichen) Vergleiches der verschiedenen
+        Modelle zur Schattierung, Abarbeiten von TODO-Noitzen,
+        Hinzufügen eines Beispieles zur parametrischen Darstellung einer
+        Kugel in Kapitel~\ref{sec:surfaces}, Korrektur diverser
+        Rechtschreibefehler in
+        Kapitel~\ref{sec:description_implicit_surfaces}.
+    }
+    \vhEntry{0.20}{03.01.2016}{SO}{Erweiterung des
+        Kapitels~\ref{subsec:global_illumination_models} um Ray Casting
+        und Ray Tracing Verfahren, Erstellen und Hinzufügen diverser
+        Illustrationen zu Kapitel~\ref{sec:illumination_models},
+        Erweiterung des Kapitels~\ref{sec:surfaces} um
+        Abschnitt~\ref{ssubsec:distance_fields} über Distanzfelder,
+        Überarbeitung der \LaTeX-Vorlage.
+    }
+    \vhEntry{0.21}{04.01.2016}{SO}{Aufteilen des
+        Kapitels~\nameref{sec:illumination_models} in Unterkapitel,
+        Erweiterung der
+        Kapitel~\ref{subsec:ray_casting}~\nameref{subsec:ray_casting}
+        und~\ref{subsec:ray_tracing}~\nameref{subsec:ray_tracing}.
+    }
+    \vhEntry{0.22}{05.01.2016}{SO}{Fertigstellung des
+        Kapitels~\ref{subsec:ray_tracing}~\nameref{subsec:ray_tracing}.
+    }
+    \vhEntry{0.23}{07.01.2016}{SO}{Erstellen und Hinzufügen von diversen
+        Illustrationen zu
+        Kapitel~\ref{subsec:ray_tracing}~\nameref{subsec:ray_tracing},
+        Hinzufügen eines Abschnittes über Shader in
+        Kapitel~\ref{sec:shading}~\nameref{sec:shading}, Korrektur des
+        Beispiels zur parametrischen Darstellung einer Kugel in
+        Kapitel~\ref{sec:surfaces}, Abarbeiten von TODO-Notizen,
+        Hinzufügen einer Einleitung zu
+        Kapitel~\ref{sec:rendering_implicit_surfaces}~\nameref{sec:rendering_implicit_surfaces},
+        Hinzufügen von Kommentaren zum Quellcode des Prototyps.
+    }
+    \vhEntry{0.24}{09.01.2016}{SO}{Einleitung der
+        Projektarbeit~\ref{chap:10_introduction} überarbeitet, Korrektur
+        der Beschreibung und Referenz von impliziten Oberflächen in
+        Kpaitel~\ref{subsec:implicit_surfaces}, Erarbeiten des
+        Fazits~\ref{chap:discussion_and_conclusion}, Beschreibung der
+        Aufgabenstellung~\ref{chap:scope}
+    }
+    \vhEntry{0.25}{10.01.2016}{SO}{Fertigstellung der
+        Kapitel~\ref{chap:scope}~\nameref{chap:scope}
+        und~\ref{chap:procedure}~\nameref{chap:procedure}, Abarbeiten
+        und Nachführen von verbleibenden TODO-Noitzen, Nachführen der
+        Versionshistorie
     }
 \end{versionhistory}
